--- a/index.html
+++ b/index.html
@@ -4,27 +4,47 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>🎉 Happy Birthday — From Muhammad Zain Mushtaq 🎂</title>
+
+<script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+
 <style>
   :root {
     --purple: #7c3aed;
     --gold: #facc15;
     --dark: #0b0820;
     --light: #f8fafc;
+    --cyan: #06b6d4;
+    --pink: #fb7185;
   }
+
+  /* MODERN UPDATE:
+    We're adding a subtle animation to the background gradients.
+    By using `background-size: 200% 200%`, we can move the
+    `background-position` to create a slow, shifting effect.
+  */
   body {
     margin: 0;
     font-family: "Poppins", sans-serif;
     color: var(--light);
-    background: radial-gradient(circle at 20% 30%, rgba(124,58,237,0.25), transparent),
-                radial-gradient(circle at 80% 70%, rgba(250,204,21,0.18), transparent),
-                linear-gradient(180deg, var(--dark), #1a1033);
+    background: 
+      radial-gradient(circle at 20% 30%, rgba(124,58,237,0.25), transparent),
+      radial-gradient(circle at 80% 70%, rgba(250,204,21,0.18), transparent),
+      linear-gradient(180deg, var(--dark), #1a1033);
+    background-size: 200% 200%; /* Needed for animation */
     overflow-x: hidden;
     text-align: center;
+    animation: animate-background 20s ease infinite; /* New animation */
+  }
+
+  @keyframes animate-background {
+    0%, 100% { background-position: 0% 50%; }
+    50% { background-position: 100% 50%; }
   }
 
   .container {
     padding: 24px 18px 100px;
     position: relative;
+    z-index: 10; /* Ensure content is above background elements */
   }
 
   h1 {
@@ -32,24 +52,40 @@
     font-weight: 800;
     letter-spacing: -1px;
     margin-bottom: 8px;
-    animation: fadeInDown 1.2s ease forwards;
+    animation: fadeInDown 1.2s ease 0.2s forwards; /* Added slight delay */
+    opacity: 0; /* Start hidden for animation */
   }
 
+  /* MODERN UPDATE:
+    We're animating the gradient on the 'h2' tag.
+    By setting a large `background-size` and animating the
+    `background-position`, we create a "flowing" text effect.
+  */
   h2 {
     font-size: clamp(20px, 6vw, 28px);
     font-weight: 700;
-    background: linear-gradient(90deg, #fff, #fde68a);
+    background: linear-gradient(90deg, #fff, #fde68a, #fff);
     -webkit-background-clip: text;
     color: transparent;
-    animation: fadeInUp 1.4s ease forwards;
+    background-size: 200% auto; /* Needed for animation */
+    animation: fadeInUp 1.4s ease 0.4s forwards,
+               flow-gradient 3s linear infinite 2s; /* New flow animation */
+    opacity: 0; /* Start hidden for animation */
   }
+  
+  @keyframes flow-gradient {
+    0% { background-position: 200% center; }
+    100% { background-position: 0% center; }
+  }
+
 
   .prayers {
     margin-top: 22px;
     font-size: 16px;
     line-height: 1.7;
     opacity: 0.9;
-    animation: fadeIn 2s ease forwards;
+    animation: fadeIn 2s ease 0.8s forwards; /* Added delay */
+    opacity: 0; /* Start hidden for animation */
   }
 
   .wish-box {
@@ -58,22 +94,47 @@
     padding: 18px;
     margin-top: 20px;
     box-shadow: 0 4px 30px rgba(0,0,0,0.4);
-    animation: popIn 1.6s ease forwards;
+    backdrop-filter: blur(10px); /* Modern glassmorphism effect */
+    -webkit-backdrop-filter: blur(10px);
+    border: 1px solid rgba(255,255,255,0.1);
+    animation: popIn 1.6s ease 0.6s forwards; /* Added delay */
+    opacity: 0; /* Start hidden for animation */
   }
 
+  /*
+    MODERN UPDATE:
+    We're adding a '::before' pseudo-element to create a
+    frosting layer, making the cake look more detailed.
+  */
   .cake {
     position: relative;
     margin: 32px auto 0;
     width: 90px;
     height: 90px;
     background: linear-gradient(180deg, #fff, #ffe9b5);
-    border-radius: 14px;
+    border-radius: 0 0 14px 14px; /* Only round bottom corners */
     box-shadow: 0 6px 20px rgba(0,0,0,0.4);
+    animation: popIn 1s ease 1s forwards; /* Added delay */
+    opacity: 0; /* Start hidden for animation */
   }
 
+  /* This is the new frosting layer */
+  .cake::before {
+    content: '';
+    position: absolute;
+    top: -15px; /* Sits on top of the cake */
+    left: 0;
+    width: 100%;
+    height: 20px;
+    background: linear-gradient(180deg, var(--light), #fefae0);
+    border-radius: 14px 14px 0 0;
+    box-shadow: 0 -3px 10px rgba(255,255,255,0.2);
+  }
+
+  /* We adjust the candle and flame to sit on the new frosting */
   .candle {
     position: absolute;
-    top: -20px;
+    top: -35px; /* Adjusted: was -20px */
     left: 50%;
     transform: translateX(-50%);
     width: 8px;
@@ -84,7 +145,7 @@
 
   .flame {
     position: absolute;
-    top: -32px;
+    top: -47px; /* Adjusted: was -32px */
     left: 50%;
     width: 16px;
     height: 16px;
@@ -95,31 +156,34 @@
   }
 
   @keyframes flicker {
-    0% { transform: translateX(-50%) scale(1); opacity: 1; }
-    50% { transform: translateX(-50%) scale(1.1); opacity: 0.8; }
-    100% { transform: translateX(-50%) scale(1); opacity: 1; }
+    0% { transform: translateX(-50%) scale(1); opacity: 1; box-shadow: 0 0 10px #ffb300, 0 0 20px #ffb300; }
+    50% { transform: translateX(-50%) scale(1.1); opacity: 0.8; box-shadow: 0 0 15px #ffb300, 0 0 25px #ffb300; }
+    100% { transform: translateX(-50%) scale(1); opacity: 1; box-shadow: 0 0 10px #ffb300, 0 0 20px #ffb300; }
   }
 
   .from {
     margin-top: 26px;
     font-size: 15px;
-    opacity: 0.85;
+    opacity: 0; /* Start hidden */
+    animation: fadeIn 2s ease 1.2s forwards; /* Added delay */
   }
 
   /* Balloons */
   .balloon {
     position: absolute;
-    bottom: -80px;
+    bottom: -100px; /* Start further down */
     width: 60px;
     height: 80px;
-    border-radius: 40px;
-    text-align: center;
+    border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%; /* More balloon-like shape */
     font-size: 18px;
     font-weight: 700;
     display: flex;
     justify-content: center;
     align-items: center;
     animation: rise 9s infinite ease-in;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.3);
+    transform: rotate(5deg); /* Slight initial tilt */
+    z-index: 5; /* Below content but above background */
   }
   .string {
     position: absolute;
@@ -132,35 +196,31 @@
   }
   .balloon:nth-child(1){left:10%;background:linear-gradient(180deg,var(--purple),#5b21b6);animation-delay:0s;}
   .balloon:nth-child(2){left:40%;background:linear-gradient(180deg,var(--gold),#f59e0b);animation-delay:2s;}
-  .balloon:nth-child(3){left:70%;background:linear-gradient(180deg,#06b6d4,#0891b2);animation-delay:1s;}
+  .balloon:nth-child(3){left:70%;background:linear-gradient(180deg,var(--cyan),#0891b2);animation-delay:1s;}
+  
+  /* Added a bit of horizontal sway to the balloon rise */
   @keyframes rise{
-    0%{transform:translateY(0);opacity:0;}
+    0%{transform:translateY(0) rotate(5deg);opacity:0;}
     20%{opacity:1;}
-    50%{transform:translateY(-350px);}
-    100%{transform:translateY(-600px);opacity:0;}
+    50%{transform:translateY(-350px) rotate(-5deg);}
+    100%{transform:translateY(-700px) rotate(5deg);opacity:0;}
   }
 
-  /* Confetti */
-  .confetti span {
-    position: absolute;
-    width: 8px;
-    height: 14px;
-    background: var(--gold);
-    animation: fall 6s linear infinite;
-  }
-  @keyframes fall {
-    0% { transform: translateY(-10px) rotate(0deg); }
-    100% { transform: translateY(100vh) rotate(600deg); }
-  }
+  /* REMOVED:
+    We are removing the old CSS-based confetti rules
+    (e.g., .confetti span, @keyframes fall)
+    because JavaScript will now handle this.
+  */
 
   /* Animations */
-  @keyframes fadeInDown {from{opacity:0;transform:translateY(-20px)}to{opacity:1;transform:none}}
-  @keyframes fadeInUp {from{opacity:0;transform:translateY(20px)}to{opacity:1;transform:none}}
+  @keyframes fadeInDown {from{opacity:0;transform:translateY(-30px)}to{opacity:1;transform:translateY(0)}}
+  @keyframes fadeInUp {from{opacity:0;transform:translateY(30px)}to{opacity:1;transform:translateY(0)}}
   @keyframes fadeIn {from{opacity:0}to{opacity:1}}
   @keyframes popIn {from{opacity:0;transform:scale(0.9)}to{opacity:1;transform:scale(1)}}
 </style>
 </head>
 <body>
+
 <div class="container">
   <h1>🎉 Happy Birthday</h1>
   <h2>Dear Muhammad Kashif 🎂</h2>
@@ -188,18 +248,52 @@
 <div class="balloon">🎉<div class="string"></div></div>
 <div class="balloon">💛<div class="string"></div></div>
 
-<div class="confetti" id="confetti"></div>
-
 <script>
-  // generate confetti
-  const confetti = document.getElementById("confetti");
-  for (let i = 0; i < 40; i++) {
-    const span = document.createElement("span");
-    span.style.left = Math.random() * 100 + "%";
-    span.style.background = ["#facc15","#7c3aed","#06b6d4","#fb7185"][Math.floor(Math.random()*4)];
-    span.style.animationDelay = (Math.random() * 4) + "s";
-    confetti.appendChild(span);
+  /*
+    MODERN UPDATE:
+    We're removing the old 'for' loop that created <span> elements.
+    Instead, we're using the 'canvas-confetti' library we imported.
+    This code creates a 5-second "rain" of confetti from the top.
+  */
+  function fireConfetti() {
+    const duration = 5 * 1000; // 5 seconds
+    const animationEnd = Date.now() + duration;
+    const defaults = { startVelocity: 30, spread: 360, ticks: 60, zIndex: 0 };
+    
+    // Our theme colors
+    const themeColors = ['#7c3aed', '#facc15', '#06b6d4', '#fb7185', '#f8fafc'];
+
+    function randomInRange(min, max) {
+      return Math.random() * (max - min) + min;
+    }
+
+    const interval = setInterval(function() {
+      const timeLeft = animationEnd - Date.now();
+
+      if (timeLeft <= 0) {
+        return clearInterval(interval);
+      }
+
+      const particleCount = 50 * (timeLeft / duration);
+      
+      // Fire confetti from two origins at the top
+      confetti(Object.assign({}, defaults, {
+        particleCount,
+        origin: { x: randomInRange(0.1, 0.3), y: Math.random() - 0.2 },
+        colors: themeColors
+      }));
+      confetti(Object.assign({}, defaults, {
+        particleCount,
+        origin: { x: randomInRange(0.7, 0.9), y: Math.random() - 0.2 },
+        colors: themeColors
+      }));
+    }, 250);
   }
+
+  // Fire the confetti as soon as the page loads!
+  window.addEventListener('load', () => {
+    fireConfetti();
+  });
 </script>
 </body>
 </html>
